--- a/rland/src/main/resources/templates/menu/list.html
+++ b/rland/src/main/resources/templates/menu/list.html
@@ -40,101 +40,33 @@
 			<section class="cart-section">
 				<h1 class="d-none">장바구니</h1>
 				<span class="text-title3">커피음료</span>
-				<div class="icon icon-basket icon-text">1</div>
+				<div class="icon icon-basket icon-text" th:text="${countInCart}">1</div>
 			</section>
 
 			<section class="menu-section">
 		        <h1 class="d-none">메뉴목록</h1>
 		        <div class="menu-list">
-		            <section class="menu">
-		                <form class="">
-		                    <h1>알랜드 커피</h1> 
+		            <section class="menu" th:each="menu:${list}">
+		                <form class="" action="list" method="post">
+		                    <h1 th:text="${menu.name}">알랜드 커피</h1> 
 		                    <div class="menu-img-box">
-		                        <a href="detail"><img class="menu-img" src="/image/product/12.png"></a>
+		                        <a href="detail" th:href="detail"><img class="menu-img" src="/image/product/12.png"></a>
 		                    </div>    
-		                    <div class="menu-price">4500 원</div>
+		                    <div class="menu-price" th:text="${menu.price}">4500 원</div>
 		                    <div class="menu-option-list">
 		                        <span class="menu-option">
-		                            <input class="menu-option-input" type="checkbox">
+		                            <input class="menu-option-input" type="checkbox" name="ice" value="true">
 		                            <label>ICED</label>
 		                        </span>            
 		                        <span class="menu-option ml-2">
-		                            <input class="menu-option-input" type="checkbox">
+		                            <input class="menu-option-input" type="checkbox"  name="large" value="true">
 		                            <label>Large</label>
 		                        </span>
 		                    </div>
 		                    <div class="menu-button-list">
-		                        <input class="btn btn-cancel btn-cancel-lg btn-size-1 btn-size-1-lg" type="submit" value="담기">
-		                        <input class="btn btn-default btn-default-lg btn-size-1 btn-size-1-lg ml-1" type="submit" value="주문하기">
-		                    </div>
-		                </form>
-		            </section>
-		            <section class="menu">
-		                <form class="">
-		                    <h1>알랜드 커피</h1> 
-		                    <div class="menu-img-box">
-		                        <img class="menu-img" src="/image/product/12.png">
-		                    </div>    
-		                    <div class="menu-price">4500 원</div>
-		                    <div class="menu-option-list">
-		                        <span class="menu-option">
-		                            <input class="menu-option-input" type="checkbox">
-		                            <label>ICED</label>
-		                        </span>            
-		                        <span class="menu-option ml-2">
-		                            <input class="menu-option-input" type="checkbox">
-		                            <label>Large</label>
-		                        </span>
-		                    </div>
-		                    <div class="menu-button-list">
-		                        <input class="btn btn-cancel btn-cancel-lg btn-size-1 btn-size-1-lg" type="submit" value="담기">
-		                        <input class="btn btn-default btn-default-lg btn-size-1 btn-size-1-lg ml-1" type="submit" value="주문하기">
-		                    </div>
-		                </form>
-		            </section>
-		            <section class="menu">
-		                <form class="">
-		                    <h1>알랜드 커피</h1> 
-		                    <div class="menu-img-box">
-		                        <img class="menu-img" src="/image/product/12.png">
-		                    </div>    
-		                    <div class="menu-price">4500 원</div>
-		                    <div class="menu-option-list">
-		                        <span class="menu-option">
-		                            <input class="menu-option-input" type="checkbox">
-		                            <label>ICED</label>
-		                        </span>            
-		                        <span class="menu-option ml-2">
-		                            <input class="menu-option-input" type="checkbox">
-		                            <label>Large</label>
-		                        </span>
-		                    </div>
-		                    <div class="menu-button-list">
-		                        <input class="btn btn-cancel btn-cancel-lg btn-size-1 btn-size-1-lg" type="submit" value="담기">
-		                        <input class="btn btn-default btn-default-lg btn-size-1 btn-size-1-lg ml-1" type="submit" value="주문하기">            
-		                    </div>
-		                </form>
-		            </section>
-		            <section class="menu">
-		                <form class="">
-		                    <h1>알랜드 커피</h1> 
-		                    <div class="menu-img-box">
-		                        <img class="menu-img" src="/image/product/12.png">
-		                    </div>    
-		                    <div class="menu-price">4500 원</div>
-		                    <div class="menu-option-list">
-		                        <span class="menu-option">
-		                            <input class="menu-option-input" type="checkbox">
-		                            <label>ICED</label>
-		                        </span>            
-		                        <span class="menu-option ml-2">
-		                            <input class="menu-option-input" type="checkbox">
-		                            <label>Large</label>
-		                        </span>
-		                    </div>
-		                    <div class="menu-button-list">
-		                        <input class="btn btn-cancel btn-cancel-lg btn-size-1 btn-size-1-lg" type="submit" value="담기">
-		                        <input class="btn btn-default btn-default-lg btn-size-1 btn-size-1-lg ml-1" type="submit" value="주문하기">
+		                    	<input type="hidden" name="menu-id" th:value="${menu.id}">
+		                        <input class="btn btn-cancel btn-cancel-lg btn-size-1 btn-size-1-lg" type="submit" name="cmd" value="담기">
+		                        <input class="btn btn-default btn-default-lg btn-size-1 btn-size-1-lg ml-1" type="submit" name="cmd" value="주문하기">
 		                    </div>
 		                </form>
 		            </section>
@@ -142,7 +74,7 @@
 		    </section>
 
 			<div class="d-flex justify-content-center">
-				<a href="" class="btn btn-next">더보기(13+)</a>
+				<a href="?p=2" class="btn btn-next">더보기(13+)</a>
 			</div>
 
 			<section class="new-menu menu-section-p">
