1220 menu API 실습

--- a/rland/src/main/resources/templates/menu/list.html
+++ b/rland/src/main/resources/templates/menu/list.html
@@ -23,7 +23,7 @@
 					<a href="/menu/list">전체</a>
 				</li>
 				<li th:class="${#strings.equals(param.c,'1')}">
-					<a href="" th:text="${session.test}">커피음료</a>
+					<a href="">커피음료</a>
 				</li>
 				<li>
 					<a href="">수제청</a>
