--- a/rland/src/main/resources/static/css/component/menu-section.css
+++ b/rland/src/main/resources/static/css/component/menu-section.css
@@ -1,4 +1,16 @@
-
+.menu-list.ajax-loader{
+    position: relative;
+}
+.menu-list.ajax-loader::after{
+    content: "";
+    display: flex;
+    background: #0007 url(/image/ajax-loader.svg) no-repeat center;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+}
 
 /* --------------------------------------------- */
 .menu{
