--- a/rland/src/main/resources/templates/menu/list.html
+++ b/rland/src/main/resources/templates/menu/list.html
@@ -4,7 +4,7 @@
 
 <!-- ---------------------------------------------------------------------- -->
 <main layout:fragment="content">
-	<script src="/js/menu/list.js" defer></script>
+	<script src="/js/menu/list.js"></script>
 	<section>
 		<header class="search-header">
 			<h1 class="text-title1-h1">알랜드 메뉴</h1>
@@ -19,19 +19,19 @@
 				<h1 class="text-normal-bold">메뉴분류</h1>
 			</div>
 			<ul>
-				<li class="menu-selected" th:class="${param.c}">
+				<li data-id="0" class="menu-selected">
 					<a href="/menu/list">전체</a>
 				</li>
-				<li th:class="${#strings.equals(param.c,'1')}">
+				<li data-id="1">
 					<a href="">커피음료</a>
 				</li>
-				<li>
+				<li data-id="2">
 					<a href="">수제청</a>
 				</li>
-				<li>
+				<li data-id="3">
 					<a href="">샌드위치</a>
 				</li>
-				<li>
+				<li data-id="4">
 					<a href="">쿠키</a>
 				</li>
 			</ul>
