--- a/rland/src/main/resources/static/css/buttons.css
+++ b/rland/src/main/resources/static/css/buttons.css
@@ -1,32 +1,28 @@
 .btn{
   /* 모든 버튼의 공통스타일 */
-  padding: .4em .8em;    
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;  
+  font-size: 12px;
+  font-weight: bold;
+  padding: .4em .8em;
   color: #fff;
   display: inline-flex;
   align-items: center;
   justify-content: center;
   transition: background-color .5s;
-
-
 }
 
-.btn-default{
-  border-radius: 20px;
+.btn-fill{
   border: 1px solid #A24F17;
   background-color: #A24F17;
 }
 
-.btn-cancel{
-  border-radius: 20px;
+.btn-line{
   border: 1px solid #A24F17;
   background-color: #fff;
   color:#000;
 }
 
-.btn-leaf {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 12px;
-  font-weight: bold;
+.btn-leaf {  
   color: #fff;
   line-height: 25px;
   padding: 3px 14px;
@@ -35,9 +31,6 @@
 }
 
 .btn-block-link {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 14px;
-  font-weight: bold;
   color: #fff;
   line-height: 40px;
   background-color: rgba(110, 152, 9, 0.65);
@@ -46,39 +39,79 @@
   height: 40px;
 }
 
+.btn-mini{
+  font-size: 10px;
+  color: #fff;
+  background-color: #000;
+  border-radius: 12px;
+  padding: 4px 12px;
+  margin-left: 13px;
+}
+
 /* --- utils ----------------- */
 .btn-size-1{
+  box-sizing: border-box;
   min-width: 80px;
 }
 
+.btn-bd-blue{
+  border-color: rgb(0, 0, 255);
+}
+
+.btn-bd-black{
+  border-color: #000;
+}
+
+.btn-color-blue{
+  background-color: #005FFF;
+}
+
+.btn-color-black{
+  background-color: #000;
+}
+
+.btn-round {  
+  border-top-left-radius: 1.5em;
+  border-bottom-left-radius: 1.5em;
+  border-top-right-radius: 1.5em;
+  border-bottom-right-radius: 1.5em;
+}
+
+
+
 @media (min-width: 768px) {
-  .btn-default-md{
+  .btn-fill-md{
       border-radius: 0px;
       font-size: 17px;
   }
 
-  .btn-cancel-md{
+  .btn-line-md{
       border-radius: 0px;
       font-size: 17px;
   }
 
 /* --- utils ----------------- */
-  
+  .btn-size-1-md{
+    min-width: 120px;
+  }
 }
 
 @media all and (min-width:1000px) {
-  .btn-default-lg{
+  .btn-fill-lg{
       border-radius: 0px;
       
   }
 
-  .btn-cancel-lg{
-      border-radius: 0px;
-      
+  .btn-line-lg{
+      border-radius: 0px;      
   }
 
   /* --- utils ----------------- */
   .btn-size-1-lg{
     min-width: 100px;
+  }
+
+  .btn-size-2-lg{
+    min-width: 120px;
   }
 }
