--- a/rland/src/main/resources/static/css/component/aside.css
+++ b/rland/src/main/resources/static/css/component/aside.css
@@ -1,48 +1,21 @@
 /*----------------------
 	/aside
 ------------------------*/
-/* 
-.header .main-menu.main-menu-show{
-    display: flex !important;
-}
-.header .main-menu.main-menu-show li{
-    
-}
-.header .main-menu.main-menu-show::before{
-    display: block;
-    content: '';
-    background-color: #000c;    
-    position: fixed;
-    left:0;
-    top: 0;
-    width:100vw;
-    height: 100vh;
-
-}
-.header .main-menu.main-menu-show::after{
-    position: fixed;
-    content: '';
-    right: 0;
-    top:0;
-    width:70%;
-    height: 100vh;
-    background-color: #fff;
-} */
 
 .aside-bar::before{
     display: block;
     content: '';
-    background-color: #000c;    
+    background-color: #000c;
     position: fixed;
     left:0;
     top: 0;
     width:100vw;
     height: 100vh;
-
+    
+    
 }
 
 .aside-bar-content {    
-    
     position: fixed;    
     right: 0px;
     top:0px;
@@ -56,12 +29,15 @@
 	z-index: 1000;
 }
 
-.aside-bar-menu-list{
-    margin-top: 20px;
-    font-size: 14px;
+@media screen and (min-width: 768px) {
+    .aside-bar::before,
+    .aside-bar-content {    
+        
+        display: none;
+    }
 }
 
-.aside-bar-menu-list>li{
-    margin-top: 5px;
-}
+@media all and (min-width:1000px) {
 
+    
+}
