--- a/rland/src/main/resources/static/css/deco.css
+++ b/rland/src/main/resources/static/css/deco.css
@@ -42,6 +42,17 @@
     -webkit-mask-size:var(--width) var(--height);
 }
 
+.deco-feather-edit::before{    
+    --width: 24px;
+    --height: 24px;
+    width: var(--width);
+    height: var(--height);
+	mask-image:url(../image/icon/feather-edit.svg);    
+    -webkit-mask-image:url(../image/icon/feather-edit.svg);    
+    mask-size:var(--width) var(--height);    
+    -webkit-mask-size:var(--width) var(--height);
+}
+
 /* ----- deco utils------------------------------- */
 
 .deco-white::before {    
