--- a/rland/src/main/resources/templates/inc/header.html
+++ b/rland/src/main/resources/templates/inc/header.html
@@ -2,9 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.org">
    <header class="header">
         <div>
-            <h1 class="header-title"><a href="/index"><img class="logo" src="../image/logo-w.png" alt="알랜드"></a></h1>
+            <h1 class="header-title"><a href="/index"><img class="logo" src="/image/logo-w.png" alt="알랜드"></a></h1>
             
-            <ul class="main-menu main-menu-show d-none d-inline-flex-sm">
+            <ul class="main-menu d-none d-inline-flex-sm">
                 <li><a class="" href="/menu/list">카페메뉴</a></li>
                 <li><a class="" href="/notice/list.html">공지사항</a></li>
                 <li><a class="" href="/user/login.html">로그인</a></li>
