--- a/rland/src/main/resources/templates/menu/list.html
+++ b/rland/src/main/resources/templates/menu/list.html
@@ -4,7 +4,7 @@
 
 <!-- ---------------------------------------------------------------------- -->
 <main layout:fragment="content">
-	<script src="/js/menu/list.js"></script>
+	<script src="/src/main/resources/static/js/menu/list.js"></script>
 	<section>
 		<header class="search-header">
 			<h1 class="text-title1-h1">알랜드 메뉴</h1>
