--- a/rland/src/main/resources/templates/user/login.html
+++ b/rland/src/main/resources/templates/user/login.html
@@ -16,7 +16,7 @@
                     <label class="d-none">아이디</label><input class="" name="username" type="text" placeholder="로그인 아이디를 입력하세요">
                 </div>
                 <div class="d-flex align-items-center">
-                    <label class="d-none">비밀번호</label><input class="" name="pwd" type="password" placeholder="비밀번호">
+                    <label class="d-none">비밀번호</label><input class="" name="password" type="password" placeholder="비밀번호">
                 </div>
 
                 <div class="d-flex align-items-center justify-content-center">
@@ -32,7 +32,7 @@
                 <input type="hidden" name="returnURL" th:value="${param.returnURL}">
             </form>
         </section>
-
+                
         <section class="register">
             <h1 class="d-none">회원가입</h1>
             <a href="signup.html">회원가입</a>
