--- a/rland/src/main/resources/templates/inc/header.html
+++ b/rland/src/main/resources/templates/inc/header.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+    xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
    <header class="header">
         <div>
             <h1 class="header-title"><a href="/index"><img class="logo" src="/image/logo-w.png" alt="알랜드"></a></h1>
@@ -8,7 +9,10 @@
                 <li><a class="" href="/admin/menu/list">메뉴관리</a></li>
                 <li><a class="" href="/menu/list">카페메뉴</a></li>
                 <li><a class="" href="/notice/list">공지사항</a></li>
-                <li><a class="" href="/user/login">로그인</a></li>
+                <li>
+                    <a class="" href="/user/login" sec:authorize="isAnonymous()">로그인</a>
+                    <a class="" href="/user/logout" sec:authorize="isAuthenticated()">로그아웃</a>
+                </li>
             </ul>
             <div class="d-none-sm"><a class="icon icon-menu icon-white" href="?m=on">메뉴버튼</a></div>
         </div>
