--- a/rland/src/main/resources/templates/user/login.html
+++ b/rland/src/main/resources/templates/user/login.html
@@ -49,7 +49,7 @@
             <div>
                 <a class="icon icon-naver mx-2" href="">네이버 로그인</a>
                 <a class="icon icon-kakao mx-2" href="">카카오 로그인</a>
-                <a class="icon icon-youtube mx-2" href="">구글 로그인</a>
+                <a class="icon icon-youtube mx-2" href="/oauth2/authorization/google">구글 로그인</a>
             </div>
         </section>
     </section>
